force-app/main/default/objects/Lead_Status_History__c/Lead_Status_History__c.object-meta.xml
<CustomObject>
    <label>Lead Status History</label>
    <nameField>
        <displayFormat>LSH-{0000000}</displayFormat>
        <label>Lead Status History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Status Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>