force-app/main/default/objects/Lead_Status_History__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>