force-app/main/default/objects/Lead_Status_History__c/fields/Status_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status End Time</label>
    <type>DateTime</type>
</CustomField>